notebook updates (markdown only)

--- a/DDPG+TD3_notebook.ipynb
+++ b/DDPG+TD3_notebook.ipynb
@@ -680,7 +680,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Training hyperparameters (matching main.py defaults)\nenv_name = \"Reacher-v5\"  # Fastest environment for training\nseed = 0\n\n# Training timesteps - using 50% of original (1M -> 500K)\nmax_timesteps = int(5e5)  # 500K timesteps (50% of original 1M)\nstart_timesteps = int(25e3)  # 25K initial random exploration (from main.py)\neval_freq = int(5e3)  # Evaluate every 5K steps\n\nbatch_size = 256  # Batch size for TD3 (DDPG uses 64, defined in its train method)\ndiscount = 0.99\ntau = 0.005  # Default tau for TD3 (DDPG uses 0.001)\n\n# TD3-specific parameters\npolicy_noise = 0.2\nnoise_clip = 0.5\npolicy_freq = 2  # Delayed policy update frequency\n\nexpl_noise = 0.1  # Exploration noise std\nsave_model = True  # Whether to save models\n\nprint(f\"Environment: {env_name}\")\nprint(f\"Seed: {seed}\")\nprint(f\"Max timesteps: {max_timesteps:,} (50% of original 1M)\")\nprint(f\"Start timesteps: {start_timesteps:,}\")\nprint(f\"Evaluation frequency: {eval_freq:,}\")\nprint(f\"Batch size: {batch_size} (TD3), 64 (DDPG)\")\nprint(f\"\\nNote: DDPG uses tau=0.001, TD3 uses tau=0.005\")\nprint(f\"Note: DDPG uses batch_size=64, TD3 uses batch_size=256\")"
+   "source": [
+    "# Training hyperparameters (matching main.py defaults)\n",
+    "env_name = \"Reacher-v5\"  # Fastest environment for training\n",
+    "seed = 0\n",
+    "\n",
+    "# Training timesteps - using 50% of original (1M -> 500K)\n",
+    "max_timesteps = int(5e5)  # 500K timesteps (50% of original 1M)\n",
+    "start_timesteps = int(25e3)  # 25K initial random exploration (from main.py)\n",
+    "eval_freq = int(5e3)  # Evaluate every 5K steps\n",
+    "\n",
+    "batch_size = 256  # Batch size for TD3 (DDPG uses 64, defined in its train method)\n",
+    "discount = 0.99\n",
+    "tau = 0.005  # Default tau for TD3 (DDPG uses 0.001)\n",
+    "\n",
+    "# TD3-specific parameters\n",
+    "policy_noise = 0.2\n",
+    "noise_clip = 0.5\n",
+    "policy_freq = 2  # Delayed policy update frequency\n",
+    "\n",
+    "expl_noise = 0.1  # Exploration noise std\n",
+    "save_model = True  # Whether to save models\n",
+    "\n",
+    "print(f\"Environment: {env_name}\")\n",
+    "print(f\"Seed: {seed}\")\n",
+    "print(f\"Max timesteps: {max_timesteps:,} (50% of original 1M)\")\n",
+    "print(f\"Start timesteps: {start_timesteps:,}\")\n",
+    "print(f\"Evaluation frequency: {eval_freq:,}\")\n",
+    "print(f\"Batch size: {batch_size} (TD3), 64 (DDPG)\")\n",
+    "print(f\"\\nNote: DDPG uses tau=0.001, TD3 uses tau=0.005\")\n",
+    "print(f\"Note: DDPG uses batch_size=64, TD3 uses batch_size=256\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2368,34 +2398,7 @@
     "Actor:   state_dim -> 256 -> 256 -> action_dim\n",
     "Critic1: (state_dim + action_dim) -> 256 -> 256 -> 1\n",
     "Critic2: (state_dim + action_dim) -> 256 -> 256 -> 1\n",
-    "```\n",
-    "\n",
-    "### Training Timestep Selection\n",
-    "\n",
-    "We reduced training from 1M to 200K timesteps because:\n",
-    "- Reacher-v5 is a relatively simple environment that converges quickly\n",
-    "- From the results, typical convergence occurs within 100K-150K steps\n",
-    "- This allows for faster experimentation and comparison\n",
-    "- Can be increased if more stable final performance is desired\n",
-    "\n",
-    "### Recommendations for Further Experiments\n",
-    "\n",
-    "1. **Hyperparameter Tuning**:\n",
-    "   - Try different `policy_freq` values (1, 2, 4) for TD3\n",
-    "   - Experiment with `tau` values (0.001, 0.005, 0.01)\n",
-    "   - Adjust exploration noise `expl_noise`\n",
-    "\n",
-    "2. **Multiple Seeds**:\n",
-    "   - Run with seeds 0-4 for statistical significance\n",
-    "   - Plot mean and standard deviation across seeds\n",
-    "\n",
-    "3. **Other Environments**:\n",
-    "   - Try more complex tasks: HalfCheetah-v5, Ant-v5, Humanoid-v5\n",
-    "   - Compare convergence speed and final performance\n",
-    "\n",
-    "4. **Architecture Variations**:\n",
-    "   - Experiment with different network sizes (128, 256, 512 hidden units)\n",
-    "   - Try different activation functions (ReLU, ELU, Swish)"
+    "```"
    ]
   },
   {
@@ -2427,11 +2430,6 @@
     "  - Learning rate: 3e-4 for both actor and critics\n",
     "  - Batch size: 256\n",
     "\n",
-    "### Training Configuration\n",
-    "- **Environment**: Reacher-v5 (fastest training time: ~51 min/1M steps)\n",
-    "- **Timesteps**: 200K (reduced for faster convergence)\n",
-    "- **Discount Factor** γ: 0.99\n",
-    "\n",
     "### Key Architecture Differences\n",
     "\n",
     "| Component | DDPG.py | TD3.py |\n",
@@ -2451,13 +2449,7 @@
     "1. [DDPG Paper](https://arxiv.org/abs/1509.02971) - Lillicrap et al., 2015\n",
     "2. [TD3 Paper](https://arxiv.org/abs/1802.09477) - Fujimoto et al., 2018\n",
     "3. [TD3 Official Implementation](https://github.com/sfujim/TD3)\n",
-    "4. [OpenAI Spinning Up in Deep RL](https://spinningup.openai.com/)\n",
-    "\n",
-    "### Next Steps\n",
-    "- Experiment with different hyperparameters\n",
-    "- Run multiple seeds for statistical significance\n",
-    "- Try more complex environments (HalfCheetah, Ant, Humanoid)\n",
-    "- Explore other advanced algorithms (SAC, PPO, etc.)"
+    "4. [OpenAI Spinning Up in Deep RL](https://spinningup.openai.com/)\n"
    ]
   }
  ],
