--- a/algorithm_comparison.ipynb
+++ b/algorithm_comparison.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
     "import DDPG\n",
     "import QR_TD3\n",
     "import Gaussian_TD3\n",
-    "\n",
+    "import OurDDPG\n",
     "# Set device\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
