--- a/results/qrtd3_K_table.tex
+++ b/results/qrtd3_K_table.tex
@@ -1,12 +1,12 @@
 \begin{table}[ht]
     \centering
-    \begin{tabular}{lccc}
+    \begin{tabular}{lcccc}
         \hline
-        Environment & $K=2$ & $K=5$ & $K=10$ \\
+        Environment & $K=2$ & $K=5$ & $K=10$ & $K=20$ \\
         \hline
-        Hopper-v5 & 1751.8 $\pm$ 654.5 & 2511.1 $\pm$ 664.0 & 3260.6 $\pm$ 83.4 \\
-        InvertedDoublePendulum-v5 & 9358.8 $\pm$ 0.6 & 9318.4 $\pm$ 0.6 & 9316.6 $\pm$ 0.7 \\
-        Walker2d-v5 & 2704.9 $\pm$ 904.0 & 2814.2 $\pm$ 685.1 & 2390.7 $\pm$ 446.0 \\
+        Hopper-v5 & 2580.0 $\pm$ 535.0 & 2804.3 $\pm$ 539.7 & 3260.6 $\pm$ 83.4 & 3283.8 $\pm$ 49.5 \\
+        InvertedDoublePendulum-v5 & 9358.8 $\pm$ 0.6 & 9317.9 $\pm$ 0.6 & 9316.6 $\pm$ 0.7 & 8302.6 $\pm$ 907.1 \\
+        Walker2d-v5 & 2376.5 $\pm$ 725.2 & 3365.3 $\pm$ 375.2 & 2390.7 $\pm$ 446.0 & 3125.3 $\pm$ 383.3 \\
         \hline
     \end{tabular}
     \caption{Final average return (mean $\pm$ standard error over seeds) for different numbers of quantiles $K$ in QRTD3.}
